samples/_failures_safe/1761162929_a170a7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f69a9ac6.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_f69a9ac6.c:167:40: error: expected ‘;’ at end of input
  167 |     for (int i = 0; i < graph->vertices
      |                                        ^
      |                                        ;
./samples/SAFE/__tmp_f69a9ac6.c:167:5: error: expected declaration or statement at end of input
  167 |     for (int i = 0; i < graph->vertices
      |     ^~~
